--- a/configure.in
+++ b/configure.in
@@ -20,9 +20,9 @@ AC_CONFIG_HEADER(include/config.h:buildlib/config.h.in include/apti18n.h:buildli
 PACKAGE="apt"
 PACKAGE_VERSION="0.9.7.7"
 PACKAGE_MAIL="APT Development Team <deity@lists.debian.org>"
-AC_DEFINE_UNQUOTED(PACKAGE,"$PACKAGE")
-AC_DEFINE_UNQUOTED(PACKAGE_VERSION,"$PACKAGE_VERSION")
-AC_DEFINE_UNQUOTED(PACKAGE_MAIL,"$PACKAGE_MAIL")
+AC_DEFINE_UNQUOTED(PACKAGE,"$PACKAGE", [package])
+AC_DEFINE_UNQUOTED(PACKAGE_VERSION,"$PACKAGE_VERSION", [package version])
+AC_DEFINE_UNQUOTED(PACKAGE_MAIL,"$PACKAGE_MAIL", [maintainer mail address])
 AC_SUBST(PACKAGE)
 AC_SUBST(PACKAGE_VERSION)
 AC_SUBST(PACKAGE_MAIL)
@@ -72,7 +72,7 @@ AC_CHECK_HEADER(db.h,
        [#include <db.h>],
        [int r, s, t; db_version(&r, &s, &t);]
       )],
-      [AC_DEFINE(HAVE_BDB)
+      [AC_DEFINE(HAVE_BDB, 1, [BerkeleyDB available ?])
        BDBLIB="-ldb"
        AC_MSG_RESULT(yes)],
       [BDBLIB=""
@@ -97,14 +97,14 @@ AC_CHECK_LIB(z, gzopen,
 	AC_MSG_ERROR([failed: Need libz]))
 AC_SUBST(HAVE_ZLIB)
 if test "x$HAVE_ZLIB" = "xyes"; then
-	AC_DEFINE(HAVE_ZLIB)
+	AC_DEFINE(HAVE_ZLIB, 1, [zlib available])
 fi
 
 HAVE_BZ2=no
 AC_CHECK_LIB(bz2, BZ2_bzopen,[AC_CHECK_HEADER(bzlib.h, [HAVE_BZ2=yes], [])], [])
 AC_SUBST(HAVE_BZ2)
 if test "x$HAVE_BZ2" = "xyes"; then
-	AC_DEFINE(HAVE_BZ2)
+	AC_DEFINE(HAVE_BZ2, 1, [bzip2 available])
 fi
 
 dnl Converts the ARCH to be something singular for this general CPU family
@@ -112,12 +112,12 @@ dnl This is often the dpkg architecture string.
 dnl First check against the full canonical canoncial-system-type in $target
 dnl and if that fails, just look for the cpu
 AC_MSG_CHECKING(debian architecture)
-archset="`dpkg-architecture -qDEB_HOST_ARCH`"
+archset="amd64"
 if test "x$archset" = "x"; then
    AC_MSG_ERROR([failed: use --host= or output from dpkg-architecture])
 fi
 AC_MSG_RESULT($archset)
-AC_DEFINE_UNQUOTED(COMMON_ARCH,"$archset")
+AC_DEFINE_UNQUOTED(COMMON_ARCH,"$archset",[architecture])
 
 dnl Single Unix Spec statvfs
 AC_CHECK_FUNC(statvfs,[HAVE_STATVFS=yes])
@@ -125,8 +125,8 @@ AC_SUBST(HAVE_STATVFS)
 
 dnl Arg, linux and bsd put their statfs function in different places
 if test x"$HAVE_STATVFS" != x"yes"; then
-   AC_EGREP_HEADER(statfs,sys/vfs.h,[AC_DEFINE(HAVE_VFS_H)],[
-   AC_EGREP_HEADER(statfs,sys/mount.h,[AC_DEFINE(HAVE_MOUNT_H)],[AC_MSG_ERROR(failed: Need statvfs)])
+   AC_EGREP_HEADER(statfs,sys/vfs.h,[AC_DEFINE(HAVE_VFS_H, 1, [sys/vfs.h available])],[
+   AC_EGREP_HEADER(statfs,sys/mount.h,[AC_DEFINE(HAVE_MOUNT_H, 1, [sys/mount.h])],[AC_MSG_ERROR(failed: Need statvfs)])
    ])
 fi
 
@@ -135,7 +135,7 @@ AC_CHECK_MEMBERS([struct statfs.f_type],,,
      #include <sys/vfs.h>])
 
 dnl We should use the real timegm function if we have it.
-AC_CHECK_FUNC(timegm,AC_DEFINE(HAVE_TIMEGM))
+AC_CHECK_FUNC(timegm,AC_DEFINE(HAVE_TIMEGM,1,[timegm() available]))
 AC_SUBST(HAVE_TIMEGM)
 
 dnl Check the architecture
@@ -144,7 +144,7 @@ AC_C_BIGENDIAN
 dnl HP-UX sux..
 AC_MSG_CHECKING(for missing socklen_t)
 AC_EGREP_HEADER(socklen_t, sys/socket.h,[AC_MSG_RESULT(no)],[
-	AC_DEFINE(NEED_SOCKLEN_T_DEFINE)
+	AC_DEFINE(NEED_SOCKLEN_T_DEFINE, 1, [socklen_t needs to be defined])
 	NEED_SOCKLEN_T_DEFINE=yes
         AC_MSG_RESULT(missing.)])
 AC_SUBST(NEED_SOCKLEN_T_DEFINE)
@@ -186,7 +186,7 @@ dnl gettext approved makefiles, so this feature is unsupported by this.
 ALL_LINGUAS="bg bs ca cs cy da de dz el es eu fi fr gl hu it ja ko ku nb nl nn pl pt_BR pt ro ru sk sl sv th tl uk vi zn_CN zh_TW"
 AM_GNU_GETTEXT(external)
 if test x"$USE_NLS" = "xyes"; then
-   AC_DEFINE(USE_NLS)
+   AC_DEFINE(USE_NLS, 1, [NLS enabled])
 fi
 AC_SUBST(USE_NLS)
 AC_PATH_PROG(BASH, bash)
