--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,32 @@
+/autom4te.cache
+/autom4te.cache/output.0
+/autom4te.cache/traces.0
+/bin
 /build/
+/buildlib/config.h.in~
+/config.log
+/config.status
+/configure
 /doc/de
+/doc/Doxyfile
 /doc/es
+/doc/examples/sources.list
 /doc/fr
 /doc/it
 /doc/ja
 /doc/pl
 /doc/pt
 /doc/pt_BR
-/autom4te.cache
-/autom4te.cache/output.0
-/autom4te.cache/traces.0
-/buildlib/config.h.in~
-/configure
-/config.log
-/config.status
-/doc/Doxyfile
+/docs
 /environment.mak
-/makefile
 /include
+/locale
+/makefile
+/obj
+/po/apt.pot
+/po/apt-utils.pot
+/po/*.d
 /po/domains
+/po/libapt-inst1.5.pot
+/po/libapt-pkg4.12.pot
+/scripts
